{
    "name": "TestControls",
    "maps": [
        {
            "name": "MainMap",
            "id": "ea01f048-ab50-409d-8c13-7a92f1637bfe",
            "actions": [
                {
                    "name": "MainInput",
                    "type": "Value",
                    "id": "09f8075c-b162-4050-86f4-45b5c59b6ffd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DoubleTapMainInput",
                    "type": "Value",
                    "id": "3f7aab05-848f-4901-9ab1-08203571b2b7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "MultiTap(tapDelay=0.3)"
                },
                {
                    "name": "SecondaryInput",
                    "type": "Value",
                    "id": "e14c839b-dd37-47d4-b8b3-68685b1d20d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8302439f-1a8e-4706-9859-51263c177c15",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4aab9cf-cff3-452f-983a-916c64156dee",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ec61d75-a912-4b7e-8639-1529c50e558f",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTapMainInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}